--- a/LoginDesigner/skin/white.css
+++ b/LoginDesigner/skin/white.css
@@ -1,7 +1,7 @@
 body {
     font-family: roboto,sans-serif;
     text-align: center;
-    background: url(../img/white.jpg);
+    background-image: url(../img/white.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
