--- a/LoginDesigner/style.css
+++ b/LoginDesigner/style.css
@@ -92,7 +92,7 @@ display: block;
     content: "\52a8\6001";
 }
 .zz {
-    background: #fff;
+    background: #fff;    padding: 5px 0;
 }
 .dalao{
     background: #FFF;
